Fix alignment of context title and description
Remove vertical-align, not needed as we have a full line-height.

Bug: T203328

--- a/src/ui/styles/contextitems/ve.ui.LinearContextItem.css
+++ b/src/ui/styles/contextitems/ve.ui.LinearContextItem.css
@@ -15,7 +15,6 @@
 }
 
 .ve-ui-linearContextItem-title > .oo-ui-labelWidget {
-	vertical-align: middle;
 	margin-left: 0.3em;
 }
 
